--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheer"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="">
-    <header>
-      <div class="container">
-        <nav>
+    <header class="page-header">
+      <div class="container main-nav">
+        <nav class="main-nav">
           <a href="./index.html" class="logo">Web<span class="page-studio">Studio</span></a>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="site-info list">
@@ -32,95 +36,134 @@
     </header>
     <main>
       <section class="hero">
-        <div>
+        <div class="container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="button">Заказать услугу</button>
         </div>
       </section>
       <section class="section">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="fuature-list list">
-          <li>
-            <h3 class="title">Внимание к деталям</h3>
-            <p class="text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Пунктуальность</h3>
-            <p class="text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Планирование</h3>
-            <p class="text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="title">Современные технологии</h3>
-            <p class="text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Преимущества</h2>
+          <ul class="fuature-list list">
+            <li>
+              <h3 class="title">Внимание к деталям</h3>
+              <p class="text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">Пунктуальность</h3>
+              <p class="text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">Планирование</h3>
+              <p class="text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3 class="title">Современные технологии</h3>
+              <p class="text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="examples list">
-          <li><img src="./img/fon1.jpg" alt="Разработка сайта" width="340" height="240" /></li>
-          <li>
-            <img src="./img/fon2.jpg" alt="Подключение социальных сетей" width="340" height="240" />
-          </li>
-          <li><img src="./img/fon3.jpg" alt="Разработка дизайна" width="340" height="240" /></li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="examples list">
+            <li><img src="./img/fon1.jpg" alt="Разработка сайта" width="340" height="240" /></li>
+            <li>
+              <img
+                src="./img/fon2.jpg"
+                alt="Подключение социальных сетей"
+                width="340"
+                height="240"
+              />
+            </li>
+            <li><img src="./img/fon3.jpg" alt="Разработка дизайна" width="340" height="240" /></li>
+          </ul>
+        </div>
       </section>
       <section class="section-2">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team list">
-          <li>
-            <img src="./img/group/Ihor.jpg" alt="Игорь Демьяненко" width="270" height="260" />
-            <h3 class="title-h">Игорь Демьяненко</h3>
-            <p class="text-team" lang="en">Product Designer</p>
-          </li>
-          <li>
-            <img src="./img/group/Olga.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3 class="title-h">Ольга Репина</h3>
-            <p class="text-team" lang="en">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./img/group/Mikola.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <h3 class="title-h">Николай Тарасов</h3>
-            <p class="text-team" lang="en">Marketing</p>
-          </li>
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team list">
+            <li class="list-team">
+              <img
+                src="./img/group/Ihor.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+                class="img"
+              />
+              <h3 class="title-h">Игорь Демьяненко</h3>
+              <p class="text-team" lang="en">Product Designer</p>
+            </li>
+            <li class="list-team">
+              <img
+                src="./img/group/Olga.jpg"
+                alt="Ольга Репина"
+                width="270"
+                height="260"
+                class="img"
+              />
+              <h3 class="title-h">Ольга Репина</h3>
+              <p class="text-team" lang="en">Frontend Developer</p>
+            </li>
+            <li class="list-team">
+              <img
+                src="./img/group/Mikola.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+                class="img"
+              />
+              <h3 class="title-h">Николай Тарасов</h3>
+              <p class="text-team" lang="en">Marketing</p>
+            </li>
 
-          <li>
-            <img src="./img/group/Mihaylo.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3 class="title-h">Михаил Ермаков</h3>
-            <p class="text-team" lang="en">UI Designer</p>
-          </li>
-        </ul>
+            <li class="list-team">
+              <img
+                src="./img/group/Mihaylo.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+                class="img"
+              />
+              <h3 class="title-h">Михаил Ермаков</h3>
+              <p class="text-team" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer-bck">
       <section class="footer">
-        <a href="./index.html" class="logo">Web<span class="page-studio-white">Studio</span></a>
-        <address class="footer">
-          <ul class="list">
-            <li>
-              <a
-                class="link-map"
-                href="https://goo.gl/maps/Tcm589jkchjnUBED6"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-            <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
-          </ul>
-        </address>
+        <div class="container">
+          <a href="./index.html" class="logo-footer"
+            >Web<span class="page-studio-white">Studio</span></a
+          >
+          <address class="footer">
+            <ul class="list">
+              <li>
+                <a
+                  class="link-map"
+                  href="https://goo.gl/maps/Tcm589jkchjnUBED6"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+              <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
       </section>
     </footer>
   </body>
