--- a/portfolio.html
+++ b/portfolio.html
@@ -11,17 +11,18 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheer" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="">
-    <header>
-      <div class="container">
-        <nav>
+    <header >
+      <div class="container main-nav">
+        <nav class="main-nav">
           <a href="./index.html" class="logo">Web<span class="page-studio">Studio</span></a>
           <ul class="site-nav list">
-            <li><a href="./index.html" class="link">Студия</a></li>
-            <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="site-info list">
@@ -32,22 +33,22 @@
     </header>
     <main>
       <section class="hero-1">
-        <div class="hero-title-1">
+        <div class="container">
           <h1 class="visually-hidden">Работы</h1>
-          <ul class="list">
+          <ul class="list-table">
             <li><button type="button" class="button-p link">Все</button></li>
             <li><button type="button" class="button-p link">Веб-сайты</button></li>
             <li><button type="button" class="button-p link">Приложения</button></li>
             <li><button type="button" class="button-p link">Дизайн</button></li>
             <li><button type="button" class="button-p link">Маркетинг</button></li>
           </ul>
-        <ul class="list">
-          <li>
+        <ul class="list-table">
+          <li class="list-team">
             <img src="./img/portfolio/tehno.jpg" alt="Интернет страница" width="370" height="294" />
             <h3 class="title-g">Технокряк</h3>
             <p class="title-p">Веб-сайт</p>
           </li>
-          <li>
+          <li class="list-team">
             <img
               src="./img/portfolio/poster.jpg"
               alt="Игра баскетболистов"
@@ -56,21 +57,21 @@
             <h3 class="title-g" lang="en">Постер New Orlean vs Golden Star</h3>
             <p class="title-p">Дизайн</p>
           </li>
-          <li>
+          <li class="list-team">
             <img
               src="./img/portfolio/restoran.jpg"
               alt="Логотип ресторана"
-              wwidth="370" height="294"
+              width="370" height="294"
             />
             <h3 class="title-g" lang="en">Ресторан Seafood</h3>
             <p class="title-p">Приложение</p>
           </li>
-          <li>
+          <li class="list-team">
             <img src="./img/portfolio/proectprime.jpg" alt="Наушники" width="370" height="294" />
             <h3 class="title-g" lang="en">Проект Prime</h3>
             <p class="title-p">Маркетинг</p>
           </li>
-          <li>
+          <li class="list-team">
             <img
               src="./img/portfolio/proectboxes.jpg"
               alt="Картонные коробки"
@@ -79,22 +80,22 @@
             <h3 class="title-g" lang="en">Проект Boxes</h3>
             <p class="title-p">Приложение</p>
           </li>
-          <li>
+          <li class="list-team">
             <img src="./img/portfolio/inspiration.jpg" alt="iMac" width="370" height="294" />
             <h3 class="title-g" lang="en">Inspiration has no Borders</h3>
             <p class="title-p">Веб-сайт</p>
           </li>
-          <li>
+          <li class="list-team">
             <img src="./img/portfolio/limited.jpg" alt="Журнал" width="370" height="294" />
             <h3 class="title-g" lang="en">Издание Limited Edition</h3>
             <p class="title-p">Дизайн</p>
           </li>
-          <li>
+          <li class="list-team">
             <img src="./img/portfolio/proectlab.jpg" alt="Этикетка" width="370" height="294" />
             <h3 class="title-g" lang="en">Проект LAB</h3>
             <p class="title-p">Маркетинг</p>
           </li>
-          <li>
+          <li class="list-team">
             <img
               src="./img/portfolio/growing.jpg"
               alt="Работа за ноутбуком"
@@ -109,7 +110,8 @@
     </main>
     <footer class="footer-bck">
       <section class="footer">
-        <a href="./index.html" class="logo">Web<span class="page-studio-white">Studio</span></a>
+        <div class="container">
+        <a href="./index.html" class="logo-footer">Web<span class="page-studio-white">Studio</span></a>
         <address class="footer">
           <ul class="list">
             <li>
@@ -125,6 +127,7 @@
             <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
           </ul>
         </address>
+      </div>
       </section>
     </footer>
   </body>
