--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="">
-    <header >
+    <header class="page-header">
       <div class="container main-nav">
         <nav class="main-nav">
           <a href="./index.html" class="logo">Web<span class="page-studio">Studio</span></a>
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-            <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li class="item"><a href="./index.html" class="link ">Студия</a></li>
+            <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
