--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
       rel="stylesheet"
     />
     <link
-      rel="stylesheer"
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -25,7 +28,7 @@
           <ul class="site-nav list">
             <li class="item"><a href="./index.html" class="link current">Студия</a></li>
             <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li class="item"><a href="" class="link ">Контакты</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="site-info list">
@@ -72,20 +75,20 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section work">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="examples list">
-            <li><img src="./img/fon1.jpg" alt="Разработка сайта" width="340" height="240" /></li>
+            <li><img src="./img/fon1.jpg" alt="Разработка сайта" width="370" height="294" /></li>
             <li>
               <img
                 src="./img/fon2.jpg"
                 alt="Подключение социальных сетей"
-                width="340"
-                height="240"
+                width="370"
+                height="294"
               />
             </li>
-            <li><img src="./img/fon3.jpg" alt="Разработка дизайна" width="340" height="240" /></li>
+            <li><img src="./img/fon3.jpg" alt="Разработка дизайна" width="370" height="294" /></li>
           </ul>
         </div>
       </section>
@@ -101,8 +104,10 @@
                 height="260"
                 class="img"
               />
+              <div class="title-text">
               <h3 class="title-h">Игорь Демьяненко</h3>
               <p class="text-team" lang="en">Product Designer</p>
+            </div>
             </li>
             <li class="list-team">
               <img
@@ -112,8 +117,10 @@
                 height="260"
                 class="img"
               />
+              <div class="title-text">
               <h3 class="title-h">Ольга Репина</h3>
               <p class="text-team" lang="en">Frontend Developer</p>
+            </div>
             </li>
             <li class="list-team">
               <img
@@ -123,8 +130,10 @@
                 height="260"
                 class="img"
               />
+              <div class="title-text">
               <h3 class="title-h">Николай Тарасов</h3>
               <p class="text-team" lang="en">Marketing</p>
+            </div>
             </li>
 
             <li class="list-team">
@@ -150,7 +159,7 @@
           >
           <address class="footer">
             <ul class="list">
-              <li>
+              <li class="footer-list">
                 <a
                   class="link-map"
                   href="https://goo.gl/maps/Tcm589jkchjnUBED6"
@@ -159,8 +168,8 @@
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-              <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+              <li class="footer-list"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+              <li class="footer-list"><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
           </address>
         </div>
