--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheer" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="">
@@ -32,7 +38,7 @@
       </div>
     </header>
     <main>
-      <section class="hero-1">
+      <section class="poetfolio">
         <div class="container">
           <h1 class="visually-hidden">Работы</h1>
           <ul class="list-table">
@@ -42,13 +48,13 @@
             <li><button type="button" class="button-p link">Дизайн</button></li>
             <li><button type="button" class="button-p link">Маркетинг</button></li>
           </ul>
-        <ul class="list-table">
-          <li class="list-team">
+        <ul class="table">
+          <li class="list-work">
             <img src="./img/portfolio/tehno.jpg" alt="Интернет страница" width="370" height="294" />
             <h3 class="title-g">Технокряк</h3>
             <p class="title-p">Веб-сайт</p>
           </li>
-          <li class="list-team">
+          <li class="list-work">
             <img
               src="./img/portfolio/poster.jpg"
               alt="Игра баскетболистов"
@@ -57,7 +63,7 @@
             <h3 class="title-g" lang="en">Постер New Orlean vs Golden Star</h3>
             <p class="title-p">Дизайн</p>
           </li>
-          <li class="list-team">
+          <li class="list-work">
             <img
               src="./img/portfolio/restoran.jpg"
               alt="Логотип ресторана"
@@ -66,12 +72,12 @@
             <h3 class="title-g" lang="en">Ресторан Seafood</h3>
             <p class="title-p">Приложение</p>
           </li>
-          <li class="list-team">
+          <li class="list-work">
             <img src="./img/portfolio/proectprime.jpg" alt="Наушники" width="370" height="294" />
             <h3 class="title-g" lang="en">Проект Prime</h3>
             <p class="title-p">Маркетинг</p>
           </li>
-          <li class="list-team">
+          <li class="list-work">
             <img
               src="./img/portfolio/proectboxes.jpg"
               alt="Картонные коробки"
@@ -80,22 +86,22 @@
             <h3 class="title-g" lang="en">Проект Boxes</h3>
             <p class="title-p">Приложение</p>
           </li>
-          <li class="list-team">
+          <li class="list-work">
             <img src="./img/portfolio/inspiration.jpg" alt="iMac" width="370" height="294" />
             <h3 class="title-g" lang="en">Inspiration has no Borders</h3>
             <p class="title-p">Веб-сайт</p>
           </li>
-          <li class="list-team">
+          <li class="list-work">
             <img src="./img/portfolio/limited.jpg" alt="Журнал" width="370" height="294" />
             <h3 class="title-g" lang="en">Издание Limited Edition</h3>
             <p class="title-p">Дизайн</p>
           </li>
-          <li class="list-team">
+          <li class="list-work">
             <img src="./img/portfolio/proectlab.jpg" alt="Этикетка" width="370" height="294" />
             <h3 class="title-g" lang="en">Проект LAB</h3>
             <p class="title-p">Маркетинг</p>
           </li>
-          <li class="list-team">
+          <li class="list-work">
             <img
               src="./img/portfolio/growing.jpg"
               alt="Работа за ноутбуком"
@@ -111,23 +117,25 @@
     <footer class="footer-bck">
       <section class="footer">
         <div class="container">
-        <a href="./index.html" class="logo-footer">Web<span class="page-studio-white">Studio</span></a>
-        <address class="footer">
-          <ul class="list">
-            <li>
-              <a
-                class="link-map"
-                href="https://goo.gl/maps/Tcm589jkchjnUBED6"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
-            <li><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
-          </ul>
-        </address>
-      </div>
+          <a href="./index.html" class="logo-footer"
+            >Web<span class="page-studio-white">Studio</span></a
+          >
+          <address class="footer">
+            <ul class="list">
+              <li class="footer-list">
+                <a
+                  class="link-map"
+                  href="https://goo.gl/maps/Tcm589jkchjnUBED6"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-list"><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+              <li class="footer-list"><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+          </address>
+        </div>
       </section>
     </footer>
   </body>
