--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,10 @@
         <ul class="table">
           <li class="list-work">
             <img src="./img/portfolio/tehno.jpg" alt="Интернет страница" width="370" height="294" />
+            <div class="table-list">
             <h3 class="title-g">Технокряк</h3>
             <p class="title-p">Веб-сайт</p>
+          </div>
           </li>
           <li class="list-work">
             <img
@@ -60,8 +62,10 @@
               alt="Игра баскетболистов"
               width="370" height="294"
             />
+            <div class="table-list">
             <h3 class="title-g" lang="en">Постер New Orlean vs Golden Star</h3>
             <p class="title-p">Дизайн</p>
+          </div>
           </li>
           <li class="list-work">
             <img
@@ -69,13 +73,17 @@
               alt="Логотип ресторана"
               width="370" height="294"
             />
+            <div class="table-list"> 
             <h3 class="title-g" lang="en">Ресторан Seafood</h3>
             <p class="title-p">Приложение</p>
+          </div>
           </li>
           <li class="list-work">
             <img src="./img/portfolio/proectprime.jpg" alt="Наушники" width="370" height="294" />
+            <div class="table-list">
             <h3 class="title-g" lang="en">Проект Prime</h3>
             <p class="title-p">Маркетинг</p>
+          </div>
           </li>
           <li class="list-work">
             <img
@@ -83,23 +91,31 @@
               alt="Картонные коробки"
               width="370" height="294"
             />
+            <div class="table-list"> 
             <h3 class="title-g" lang="en">Проект Boxes</h3>
             <p class="title-p">Приложение</p>
+          </div>
           </li>
           <li class="list-work">
             <img src="./img/portfolio/inspiration.jpg" alt="iMac" width="370" height="294" />
+            <div class="table-list">
             <h3 class="title-g" lang="en">Inspiration has no Borders</h3>
             <p class="title-p">Веб-сайт</p>
+          </div>
           </li>
           <li class="list-work">
             <img src="./img/portfolio/limited.jpg" alt="Журнал" width="370" height="294" />
+            <div class="table-list">
             <h3 class="title-g" lang="en">Издание Limited Edition</h3>
             <p class="title-p">Дизайн</p>
+          </div>
           </li>
           <li class="list-work">
             <img src="./img/portfolio/proectlab.jpg" alt="Этикетка" width="370" height="294" />
+            <div class="table-list">
             <h3 class="title-g" lang="en">Проект LAB</h3>
             <p class="title-p">Маркетинг</p>
+          </div>
           </li>
           <li class="list-work">
             <img
@@ -107,15 +123,16 @@
               alt="Работа за ноутбуком"
               width="370" height="294"
             />
+            <div class="table-list">
             <h3 class="title-g" lang="en">Growing Business</h3>
             <p class="title-p">Приложение</p>
+          </div>
           </li>
         </ul>
       </div>
       </section>
     </main>
     <footer class="footer-bck">
-      <section class="footer">
         <div class="container">
           <a href="./index.html" class="logo-footer"
             >Web<span class="page-studio-white">Studio</span></a
@@ -136,7 +153,6 @@
             </ul>
           </address>
         </div>
-      </section>
     </footer>
   </body>
 </html>
